--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ body {
   }
   
   h2 {
-    margin-top: 2rem;
+    margin-top: 1.2rem;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
   }
   
   nav {
