change dark bg to blue

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   
   /* Dark mode overrides */
   body.dark-mode {
-    background: #111;
+    background: #1a203f;
     color: #eee;
   }
   
