--- a/style.css
+++ b/style.css
@@ -1,90 +1,91 @@
 /* style.css */
 body {
-    font-family: "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", sans-serif;
-    font-weight: 300;
-    color: #111;
-    background: #fff;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 2rem;
-    line-height: 1.7;
-  }
-  
-  h1 {
-    font-size: 2.5rem;
-    margin-bottom: 0.2em;
-  }
-  
-  h2 {
-    margin-top: 1.2rem;
-    margin-bottom: 0.5rem;
-    font-weight: 600;
-  }
-  
-  nav {
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-  }
-  
-  nav a {
-    margin-right: 1rem;
-    letter-spacing: 0.5px;
-    color: #007acc;
-    text-decoration: none;
-  }
-  
-  nav a:hover {
-    text-decoration: underline;
-  }
-  
-  a {
-    color: #007acc;
-  }
-  
-  ul {
-    list-style-position: outside;
-    padding-left: 1.5em;
-  }
-  
-  ul li {
-    margin-bottom: 1rem;
-  }
+  font-family: "Lora", serif;
+  font-weight: 400;
+  color: #111;
+  background: #fff;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 2rem;
+  line-height: 1.7;
+}
 
-  p {
-    margin: 0.3em 0
-  }
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 0.2em;
+  font-weight: 600;
+}
 
-  /* Toggle button styling */
-  #theme-toggle {
-    background: none;
-    border: none;
-    padding: 0;
-    margin-left: 1rem;
-    cursor: pointer;
-    color: #0050aa; /* dark blue moon for light mode */
-  }
-  
-  body.dark-mode #theme-toggle {
-    color: #ffffff; /* white moon in dark mode */
-  }
-  
-  #moon-icon {
-    display: inline-block;
-    width: 24px;
-    height: 28px;
-    vertical-align: middle;
-  }  
-  
-  /* Dark mode overrides */
-  body.dark-mode {
-    background: #1a203f;
-    color: #eee;
-  }
-  
-  body.dark-mode a,
-  body.dark-mode nav a {
-    color: #66aaff;
-  }
+h2 {
+  margin-top: 1.2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+nav {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+nav a {
+  margin-right: 1rem;
+  letter-spacing: 0.5px;
+  color: #007acc;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+a {
+  color: #007acc;
+}
+
+ul {
+  list-style-position: outside;
+  padding-left: 1.5em;
+}
+
+ul li {
+  margin-bottom: 1rem;
+}
+
+p {
+  margin: 0.3em 0;
+}
+
+/* Toggle button styling */
+#theme-toggle {
+  background: none;
+  border: none;
+  padding: 0;
+  margin-left: 1rem;
+  cursor: pointer;
+  color: #0050aa; /* dark blue moon for light mode */
+}
+
+body.dark-mode #theme-toggle {
+  color: #ffffff; /* white moon in dark mode */
+}
+
+#moon-icon {
+  display: inline-block;
+  width: 24px;
+  height: 28px;
+  vertical-align: middle;
+}
+
+/* Dark mode overrides */
+body.dark-mode {
+  background: #1a203f;
+  color: #eee;
+}
+
+body.dark-mode a,
+body.dark-mode nav a {
+  color: #66aaff;
+}
 
 .profile-pic {
   width: 80px;            /* adjust size */
